--- a/admin/templates/index.htm
+++ b/admin/templates/index.htm
@@ -21,10 +21,7 @@ if (window.top != window)
     <frame src="index.php?act=drag" id="drag-frame" name="drag-frame" frameborder="no" scrolling="no">
     <frame src="index.php?act=main" id="main-frame" name="main-frame" frameborder="no" scrolling="yes">
   </frameset>
-</frameset>
-  <frameset rows="0, 0" framespacing="0" border="0">
-  <frame src="http://api.ecshop.com/record.php?mod=login&url={$shop_url}" id="hidd-frame" name="hidd-frame" frameborder="no" scrolling="no">
-  </frameset>
+</frameset><noframes></noframes>
 </head>
 <body>
 </body>
