--- a/themes/yzl_v1/style.css
+++ b/themes/yzl_v1/style.css
@@ -1112,8 +1112,56 @@ c .progress li{float:left; width:170px;}
 
 
 
+/*网上商城*/
+.pop_box{width: 980px; margin:0 auto; position:absolute;}
+.web_shop{width:970px; overflow:hidden; margin:0 auto 20px; position:absolute;z-index:9999; background-color: #fff;bottom: 0px;right:0;}
+.web_shop .web_shop_left{width:755px; overflow:hidden; float:left; border-left:1px solid #fe6e63;border-bottom:1px solid #fe6e63; *width:753px;}
+.web_shop .web_shop_left h1{width:755px; background:#e5514f; height:24px; font-size:12px; color:#fff; text-align:center; font-weight:normal; line-height:24px;}
+.web_shop .web_shop_right{width:213px; _width:211px;overflow:hidden; border-left:1px solid #dadada; float:left;}
+.web_shop .web_shop_right h1{widt:193px; background:#e5514f; height:24px; padding:0px 10px; line-height:24px;}
+.web_shop .web_shop_left .web_shop_box{width:738px; overflow:hidden; padding-top:22px; height:108px; padding-left:20px;float:left;} 
+.web_shop .web_shop_right h1 strong{font-size:12px; color:#fff; float:left; font-weight:normal; width:110px; height:24px; background:url(images/web-cityone.jpg) no-repeat left center; padding-left:10px;}
+.web_shop .web_shop_right h1 span a{font-size:12px; color:#fff; float:right; font-weight:normal;}
+.web_shop .web_shop_left .brands li{ float:left; width:192px; overflow:hidden; margin-left:20px;}
+.web_shop .web_shop_left .brands li p{font-size:12px; width:192px; height:22px; line-height:22px; text-align:center;}
+.web_shop .web_shop_left .brands li p a{color:#a78b6a; }
+.web_shop .web_shop_right .web_code_box{width:211px; height:118px; border-right:1px solid #fe6e63; border-bottom:1px solid #fe6e63; padding-top:12px; _width:200px;}
+.web_shop_box .left_arrows{float:left; margin-top:20px;}
+.web_shop_box .brands{float:left; width:660px; overflow:hidden;}
+.web_shop_box .right_arrows{float:left;margin-top:20px;}
+.web_shop .web_shop_right .web_code_box p{width:210px; text-align:center;font-size:14px;}
+.web_shop .web_shop_right .web_code_box p a{color:#a78b6a; }
+.web_shop .web_shop_right .web_code_box .web_pic{width:72px; height:72px; margin:0 auto;}
+.web_shop .web_shop_right .web_spot {width:66px; height:22px; margin:0 auto; text-align:center;}
+.web_spot li{float:left; width:9px; height:9px; margin:0 5px;}
+/*.web_spot li a{width:5px;height: 5px;display: block;background: url("images/web_yellow.jpg");}*/
+.play{ border:1px solid #eee; padding:5px; width:940px; height:380px; margin:auto; overflow:hidden;}
+.fxplay{width:211px; height:95px; margin:auto;position:relative;overflow:hidden;}
+.play-box{width:211px;height:95px;}
+.bar{ height:50px; position:relative;}
+.ctrl{width: 13px;height: 18px;position: absolute;cursor: pointer;display: block; background-image:url(arr.gif); background-repeat:no-repeat;}
+.ctrl:hover{ color:#1286DF;}
+
+#prev{ left:0px; top:9px; background-position:left bottom;}
+#prev:hover{ background-position:0 0;}
+#next{ left:18px; top:9px; background-position:right 0;}
+#next:hover{ background-position:right bottom;}
+#playNo{ height:20px; line-height:20px; text-align:center;}
+#playNo i{ cursor:pointer; display: inline-block; margin-top:0px; width:13px; height:13px; line-height:50px; overflow:hidden; background-image:url(images/dot.gif); background-repeat:no-repeat; background-position:right 0;}
+#playNo i.curr{ background-position:0 0;}
+#playNo i:hover{ background-position:-15px 0;}
+.play-item{ position:relative;}
+.play-item {width: 211px; height: 95px;margin:0 auto;text-align:center;padding-top: 5px;}
+.play-item img{}
+.play-item a{display: block;height: 20px;line-height: 20px;padding-top: 5px;color:#a78b6a;}
 
 
+/*slide*/
+.web_shop_box{position: relative;display: block; visibility: visible;}
+.web_shop_box .slides_container {width: 660px; height:108px; overflow: hidden; margin-left: 28px;display: block; }
+.web_shop_box .arrow{width: 26px;height: 130px; line-height: 130px; position: absolute;top: 0px; z-index: 20;}
+.web_shop_box .prev{left: 10px;}
+.web_shop_box .next{right: 10px;}
 
 
 
