首页完成版
git-svn-id: http://www.svnchina.com/svn/noface@21 f188abb9-0070-40a5-a00a-d48f6c791f86

--- a/themes/yzl_v1/css/foucs.css
+++ b/themes/yzl_v1/css/foucs.css
@@ -21,7 +21,7 @@ html, body { background: #fff; font: 12px/1.5 tahoma,helvetica,arial,\5b8b\4f53,
 
 a { color: #262626; text-decoration: none; }
     a:hover { color: #FF4503; text-decoration: underline; }
-#main {overflow: hidden; zoom: 1; position: relative; }
+#main {overflow: hidden; zoom: 1; position: relative; z-index: 10; }
 #index_b_hero { width: 980px; height: 440px; margin: auto; position: relative; }
     #index_b_hero img { width: 980px; height: 430px; }
     #index_b_hero .heros { width: 980px; height: 440px; }
