完成桌面壁纸下载页面
git-svn-id: http://www.svnchina.com/svn/noface@31 f188abb9-0070-40a5-a00a-d48f6c791f86

--- a/admin/templates/article_info.htm
+++ b/admin/templates/article_info.htm
@@ -133,7 +133,7 @@
             <td>
               {foreach from=$img_list item=img key=i}
               <div id="wallpaper_{$img.img_id}" style="float:left; text-align:center; border: 1px solid #DADADA; margin: 4px; padding:2px;">
-                <a href="javascript:;" onclick="if (confirm('{$lang.drop_img_confirm}')) dropImg('{$img.img_id}')">[-]</a><br />
+                <a href="javascript:;" onclick="if (confirm('是否删除该图片')) dropImg('{$img.img_id}')">[-]</a><br />
                 <a href="goods.php?act=show_image&img_url={$img.img_url}" target="_blank">
                 <img src="../{if $img.thumb_url}{$img.thumb_url}{else}{$img.img_url}{/if}" {if $thumb_width neq 0}width="{$thumb_width}"{/if} {if $thumb_height neq 0}height="{$thumb_height}"{/if} border="0" />
                 </a><br />
