git-svn-id: http://www.svnchina.com/svn/noface@33 f188abb9-0070-40a5-a00a-d48f6c791f86

--- a/admin/templates/articlecat_info.htm
+++ b/admin/templates/articlecat_info.htm
@@ -27,6 +27,7 @@
         <option {if $catType eq 7}selected{/if} value="7">图片下载</option>
         <option {if $catType eq 8}selected{/if} value="8">视频下载</option>
         <option {if $catType eq 9}selected{/if} value="9">招聘</option>
+         <option {if $catType eq 10}selected{/if} value="10">新闻</option>
       </select>
     </td>
   </tr>
