--- a/themes/yzl_v1/style.css
+++ b/themes/yzl_v1/style.css
@@ -14,6 +14,7 @@ p,ul,li,dl,dt,dd,h1,h2,h3,h4,img,span,input,select,option{margin:0px; padding:0p
 *{font-family:Microsoft Yahei;}
 #head{width:100%; height:76px;background:url(images/hide_pic.jpg) repeat-x left bottom; position:relative;}
 a:link,a:visited{ text-decoration:none;}
+.clear {display: block; clear: both; }
 #head .head_box{width:980px; margin:0 auto; height:76px;}
 #head .vitta{width:100%; height:8px; background:#916553;}
 #head .top{width:980px; height:76px; margin:0 auto; position:absolute; left:center; top:0;}
@@ -53,7 +54,7 @@ a:link,a:visited{ text-decoration:none;}
 
 .skin {width:980px; overflow:hidden; margin:43px auto 0;}
 .skin div{float:left;}
-#foot_inner{width:100%; overflow:hidden; border-top:1px solid #e3e3e3; padding-top:18px;}
+#foot_inner{width:100%; height: 120px; overflow:hidden; border-top:1px solid #e3e3e3; padding-top:18px;}
 .foot{width:980px; overflow:hidden; margin:30px auto 0;}
 .foot .foot_box li{float:left;}
 .foot .foot_nav{float:left; font-size:12px;}
@@ -73,8 +74,8 @@ a:link,a:visited{ text-decoration:none;}
 .top_grossing ul li{float:left;width:118px; height:19px;line-height:19px; font-size:12px;  border-right:1px solid #f85c51; text-align:center;}
 .top_grossing ul li a{color:#fff;}
 .inner_banner{width:100%; background:url(images/inner_banner.jpg)  no-repeat center center; height:148px;}
-.inner_content{width:980px; overflow:hidden; margin:0 auto;}
-.inner_content .innernews_left{width:219px; float:left; height:560px; float:left; background:url(images/left_bg.png) no-repeat; padding-top:77px; position:relative; position:absolute; top:277px;}
+.inner_content{width:980px; overflow:hidden; margin:0 auto; min-height: 640px;}
+.inner_content .innernews_left{display: block; width:219px; float:left; height:560px; float:left; background:url(images/left_bg.png) no-repeat; padding-top:77px; position:relative; position:absolute; top:277px;}
 .inner_content .innernews_big_left{ background:url(images/left_big_bg.png) no-repeat; height:949px;}
 .inner_content  .innernews_left_box{width:219px;overflow:hidden;position:absolute;top:77px;right:-59px;}
 .innernews_left h1{width:160px; height:35px; background:url(images/left_tittle_bg.png) no-repeat; color:#fff; font-size:18px; font-weight:normal; text-align:center; clear:both;}
@@ -83,7 +84,7 @@ a:link,a:visited{ text-decoration:none;}
 .innernews_left .innernews_list .no_border{border-bottom:none;}
 .innernews_left .innernews_list li a{color:#ea4b44;}
 .innernews_left .innernews_list li a:hover{color:#b68e76;}
-.inner_content .innernews_right{width:700px; overflow:hidden; float:right;min-height: 950px;}
+.inner_content .innernews_right{width:700px; overflow:hidden; float:right;/*min-height: 640px;*/}
 .inner_content .innernews_right .bread_crumbs{height:38px; width:350px; color:#b68e76; font-size:12px; font-weight:normal; font-family:Sim Sun; line-height:38px;}
 .inner_content .innernews_right .bread_crumbs a{color:#b68e76;}
 .inner_content .innernews_right .bread_crumbs a:hover{color:#d1bc9c;}
@@ -92,7 +93,7 @@ a:link,a:visited{ text-decoration:none;}
 .inner_content .innernews_right_text h1 span{color:#ccc; font-size:12px; margin:0px 8px;}
 .inner_content .innernews_right_text h1 strong{font-weight:normal; margin-right:18px;}
 .inner_content .innernews_right_text p{line-height:18px; color:#999; font-size:12px; font-family:Sim Sun; margin-top:16px;}
-.inner_content .companynew_list{width:700px; overflow:hidden;}
+.inner_content .companynew_list{width:700px; /*overflow:hidden;*/}
 .inner_content .companynew_list h1{width:264px; height:24px; margin:40px 0;}
 .inner_content .companynew_list .brand_news{background:url(images/brandnews.jpg) no-repeat;}
 .inner_content .companynew_list .wall_paper{width:264px; height:24px; background:url(images/wallpaper.jpg) no-repeat;}
@@ -319,7 +320,7 @@ a:link,a:visited{ text-decoration:none;}
 .Bestsellers .mask_inner li .buy_btn{margin-top:4px;}
 .Bestsellers .mask_inner li .buy_btn img{margin-right:8px;}
 /*inner_onebanner*/
-.inner_onebanner{width:100%; overflow:hidden; background:url(images/inner_onebanner.jpg) no-repeat center center; height:394px;border-top:1px solid #ccc; margin-bottom:400px;}
+.inner_onebanner{width:100%; overflow:hidden; background:url(images/inner_onebanner.jpg) no-repeat center center; /*height:394px;*/height:auto;border-top:1px solid #ccc; margin-bottom:400px;}
 .inner_bottom{margin-bottom:710px;}
 .inner_bottomone{margin-bottom:864px;}
 .inner_bottomtwo{margin-bottom:764px;}
