git-svn-id: http://www.svnchina.com/svn/noface@38 f188abb9-0070-40a5-a00a-d48f6c791f86

--- a/admin/templates/articlecat_info.htm
+++ b/admin/templates/articlecat_info.htm
@@ -57,6 +57,15 @@
           </tr>
 	<!--代码增加 end By thunje#URLdf-->
 
+  <!--代码增加 start By 自定义模板-->
+      <tr>
+        <td class="label"><font color=#ff3300>自定义模板：</font></td>
+        <td>
+          <input type="text" name="define_theme" value="{$cat.define_theme}" size="30"  /><br><span class="notice-span" >自定义模板，留空则使用分类模板或者默认模板。</span>
+        </td>
+      </tr>
+  <!--代码增加 end By 自定义模板-->
+
   <tr>
     <td class="label"><a href="javascript:showNotice('notice_keywords');" title="{$lang.form_notice}">
         <img src="images/notice.gif" width="16" height="16" border="0" alt="{$lang.form_notice}"></a>{$lang.cat_keywords}</td>
