git-svn-id: http://www.svnchina.com/svn/noface@48 f188abb9-0070-40a5-a00a-d48f6c791f86

--- a/admin/templates/category_info.htm
+++ b/admin/templates/category_info.htm
@@ -48,17 +48,17 @@
         </td>
       </tr>
 
-	  <!--´úÂëÔö¼Ó start By thunje#URLdf-->
+	  <!--è‡ªå®šä¹‰URL start By thunje#URLdf-->
 	   <tr>
-        <td class="label"><font color="#ff3300">×Ô¶¨ÒåURL:</font></td>
+        <td class="label"><font color="#ff3300">è‡ªå®šä¹‰URL:</font></td>
         <td>
           <input type="text" name="define_url" {if $cat_info.define_url}value="{$cat_info.define_url}"{else} value=""{/if} size="30" />
 		  <input type="hidden" name="old_define_url" value="{$cat_info.define_url}" />
 		  <br>
-		  <span class="notice-span" >ÀıÈçÄúÔÚÕâÀïÊäÈëÁË nanzhuang , ÄÇÃ´Ç°Ì¨·ÖÀàÒ³ÃæµÄ URL ¾ÍÊÇ http://www.xxx.com/nanzhuang/ </span>
+		  <span class="notice-span" >åªèƒ½å¡«è‹±æ–‡æ•°å­—å’Œä¸‹åˆ’çº¿_,å±•ç¤ºé“¾æ¥æ ¼å¼å¦‚ http://www.xxx.com/nanzhuang/ </span>
         </td>
       </tr>
-	  <!--´úÂëÔö¼Ó end By thunje#URLdf-->
+	  <!--è‡ªå®šä¹‰URL end By thunje#URLdf-->
 
       <tr>
         <td class="label">{$lang.show_in_index}:</td>
@@ -173,7 +173,7 @@
 <!--
 document.forms['theForm'].elements['cat_name'].focus();
 /**
- * ¼ì²é±íµ¥ÊäÈëµÄÊı¾İ
+ * ï¿½ï¿½ï¿½?ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
  */
 function validate()
 {
@@ -187,12 +187,12 @@ function validate()
 }
 onload = function()
 {
-  // ¿ªÊ¼¼ì²é¶©µ¥
+  // ï¿½ï¿½Ê¼ï¿½ï¿½é¶©ï¿½ï¿½
   startCheckOrder();
 }
 
 /**
- * ĞÂÔöÒ»¸öÉ¸Ñ¡ÊôĞÔ
+ * ï¿½ï¿½ï¿½ï¿½Ò»ï¿½ï¿½É¸Ñ¡ï¿½ï¿½ï¿½ï¿½
  */
 function addFilterAttr(obj)
 {
@@ -230,7 +230,7 @@ function addFilterAttr(obj)
 }
 
 /**
- * É¾³ıÒ»¸öÉ¸Ñ¡ÊôĞÔ
+ * É¾ï¿½ï¿½Ò»ï¿½ï¿½É¸Ñ¡ï¿½ï¿½ï¿½ï¿½
  */
 function removeFilterAttr(obj)
 {
