--- a/admin/templates/goods_info.htm
+++ b/admin/templates/goods_info.htm
@@ -42,6 +42,11 @@
             </select>
             {$lang.require_field}</td>
           </tr>
+
+            <tr>
+                <td class="label">副标题：</td>
+                <td><input type="text" name="goods_subtitle" value="{$goods.goods_subtitle|escape}" size="30" /></td>
+            </tr>
           <tr>
             <td class="label">
             <a href="javascript:showNotice('noticeGoodsSN');" title="{$lang.form_notice}"><img src="images/notice.gif" width="16" height="16" border="0" alt="{$lang.form_notice}"></a> {$lang.lab_goods_sn} </td>
@@ -254,9 +259,21 @@
             <td class="label">{$lang.lab_keywords}</td>
             <td><input type="text" name="keywords" value="{$goods.keywords|escape}" size="40" /> {$lang.notice_keywords}</td>
           </tr>
+            <tr>
+                <td class="label">{$lang.lab_goods_brief}</td>
+                <td><textarea name="goods_brief" cols="40" rows="3">{$goods.goods_brief|escape}</textarea></td>
+            </tr>
+            <tr>
+                <td class="label">推荐肤质：</td>
+                <td><textarea name="goods_for_skin" cols="40" rows="3">{$goods.goods_for_skin|escape}</textarea></td>
+            </tr>
+            <tr>
+                <td class="label">养肤成分：</td>
+                <td><textarea name="composition" cols="40" rows="3">{$goods.composition|escape}</textarea></td>
+            </tr>
           <tr>
-            <td class="label">{$lang.lab_goods_brief}</td>
-            <td><textarea name="goods_brief" cols="40" rows="3">{$goods.goods_brief|escape}</textarea></td>
+            <td class="label">包装规格：</td>
+            <td><textarea name="goods_packing" cols="40" rows="3">{$goods.goods_packing|escape}</textarea></td>
           </tr>
           <tr>
             <td class="label">
