--- a/data/flashdata/o.slider/css/o.slider.css
+++ b/data/flashdata/o.slider/css/o.slider.css
@@ -4,7 +4,7 @@
 -------------------------------------------------------------------------*/
 .o-slider-external {display: block;position: relative;overflow: hidden;top:-32px;
 	/* You can change the following attributes */
-	width: 100%;min-width: 900px;padding-top: 0px;padding-bottom: 0px;}
+	width: 100%;min-width: 900px;padding-top: 0px;padding-bottom: 0px; z-index:1;}
 
 
 /* Image blocks
