添加文章分类跳转到子类功能, 修复导航引用模版错误问题;
git-svn-id: http://www.svnchina.com/svn/noface@57 f188abb9-0070-40a5-a00a-d48f6c791f86

--- a/admin/templates/articlecat_info.htm
+++ b/admin/templates/articlecat_info.htm
@@ -38,6 +38,17 @@
       <input type="text" name='sort_order' {if $cat.sort_order}value='{$cat.sort_order}'{else} value="50"{/if} size="15" />
     </td>
   </tr>
+
+    <tr>
+        <td class="label">跳转到子分类:</td>
+        <td>
+            <select name="article_cat_rewrite" onchange="catChanged()" {if $disabled }disabled="disabled"{/if} >
+            <option value="0">跳转到的子类</option>
+            {$cat_child_select}
+            </select>
+        </td>
+    </tr>
+
     <tr>
     <td class="label">{$lang.show_in_nav}:</td>
     <td>
