解决导航 ie下透明问题
git-svn-id: http://www.svnchina.com/svn/noface@58 f188abb9-0070-40a5-a00a-d48f6c791f86

--- a/themes/yzl_v3/css/style.css
+++ b/themes/yzl_v3/css/style.css
@@ -51,7 +51,7 @@ a:hover{ text-decoration:none;}
 #navmenu{position: relative; z-index: 10;}
 
 .nav_box{width:998px;height:31px;border-top:2px solid #954d97;position:absolute;top:-1px;left:0px;}
-.nav_box_inner{width:998px; height:31px; background:#9fa0a0; opacity:0.5; }
+.nav_box_inner{width:998px; height:31px; background:#9fa0a0; /*opacity:0.5;*/filter: alpha(opacity=75);-moz-opacity: 0.75; opacity: 0.75; }
 /*用户注册*/
 .login_content{width:998px; overflow:hidden; margin:28px auto 0;}
 .login_content .login_crumbs{font-size:14px; color:#984e9a; height:32px; line-height:32px;}
