--- a/themes/yzl_v3/css/style.css
+++ b/themes/yzl_v3/css/style.css
@@ -40,13 +40,14 @@ a:hover{ text-decoration:none;}
 .skin_nav a{color:#5a5a5a;display:inline-block; width:106px; height:22px;line-height:22px; text-align:center; background:url(../images/header_r_bg.jpg) no-repeat right center;}
 .skin_nav .samll_shop{width:115px; heigth:22px; background:url(../images/Sshop_bag.jpg) no-repeat right center;}
 .skin_nav a:hover{color:#984e9a;}
-.foot{width:988px; overflow:hidden; margin:0 auto; padding-top:14px;  border-top:1px solid #ccc;}
+.foot{width:988px; margin:0 auto; padding-top:14px;  border-top:1px solid #ccc;}
 .foot .left{float:left; width:420px; overflow:hidden;}
 .foot .left .record{color:#5a5a5a; font-size:11px; height:32px; line-height:32px;}
 .foot .left .foot_nav{width:420px; overflow:hidden; font-size:11px;}
 .foot .left .foot_nav a{color:#5a5a5a; margin-right:26px;}
-.foot .right{float:right; width:80px; overflow:hidden;}
+.foot .right{float:right; width:80px; position: relative;}
 .foot .right img{margin-left:5px;}
+	#show_weixin{display: none;position: absolute;top:-120px;left:-30px;z-index:10;}
 
 #navmenu{position: relative; z-index: 10;}
 
