git-svn-id: http://www.svnchina.com/svn/noface@72 f188abb9-0070-40a5-a00a-d48f6c791f86

--- a/admin/templates/goods_info.htm
+++ b/admin/templates/goods_info.htm
@@ -47,6 +47,13 @@
                 <td class="label">副标题：</td>
                 <td><input type="text" name="goods_subtitle" value="{$goods.goods_subtitle|escape}" size="30" /></td>
             </tr>
+
+            <tr>
+                <td class="label">天猫链接：</td>
+                <td><input type="text" name="taobao_url" value="{$goods.taobao_url}" size="30" /></td>
+            </tr>
+
+
           <tr>
             <td class="label">
             <a href="javascript:showNotice('noticeGoodsSN');" title="{$lang.form_notice}"><img src="images/notice.gif" width="16" height="16" border="0" alt="{$lang.form_notice}"></a> {$lang.lab_goods_sn} </td>
