--- a/themes/yzl_v3/css/style.css
+++ b/themes/yzl_v3/css/style.css
@@ -45,7 +45,7 @@ a.indiv{display: block; float: left; width:100%; height: 100%; overflow: hidden;
 .content_box .nav_inner .one_menu_hover .two_menu{width:104px; padding-bottom:2px; border-bottom:1px solid #984e9a; background:#fff; display:block; /*border-left:1px solid #984e9a;border-right:1px solid #984e9a;*/}
 .content_box .nav_inner .two_menu{ display:none;position: absolute; top:30px;left:0; visibility:visible;}
 .content_box .nav_inner .one_menu_hover .all_products{width:312px; left:-104px; top:31px;}
-.content_box .nav_inner .one_menu_hover .two_menu a{width:94px; height:21px; line-height:21px; text-align:left; background:#fff; font-size:11px;color:#595757; display:block; padding-left:10px;}
+.content_box .nav_inner .one_menu_hover .two_menu a{width:100%; height:21px; line-height:21px; text-align:center; background:#fff; font-size:11px;color:#595757; display:block; }
 .content_box .nav_inner .one_menu_hover .two_menu span a{width:80px; height:21px; line-height:21px; text-align:left; background:#fff; font-size:11px;color:#984e9a; display:block; padding-left:24px;}
 
 .content_box .nav_inner .one_menu_hover .two_menu a:hover{ background:#dcdddd;}
@@ -178,14 +178,14 @@ b.img-desc{ width:16px; height:16px; background: url("../images/ui-icons_984e9a_
 .product_detail .center .teamwork .current a{color:#fff;}
 .product_detail .center .teamwork .arrows{width:25px; height:14px;border-left:1px solid #ebebeb; margin-top:6px; cursor:pointer; display:inline-block;}
 .product_detail .center .teamwork .arrows a{width:25px; height:14px;  background:url(../images/details_arrows.jpg) no-repeat 12px 4px; display:block;}
-.product_detail .right{width:134px; height:496px; background:#f9f9f9; float:right; border:1px solid #ebebeb;}
+.product_detail .right{width:134px; height:100%; background:#f9f9f9; float:right; border:1px solid #ebebeb;}
 .product_detail .right h4{font-size:12px; color:#ccc; font-family:Microsoft Yahei; height:25px; line-height:25px; width:134px; text-align:center; margin-top:8px;}
 .product_detail .right dl{overflow:hidden; padding:10px 6px 0; border-bottom:1px dashed #ccc; margin:0 auto;}
 .product_detail .right .no_border{border-bottom:none;}
 .product_detail .right dt{text-align:center;}
 .product_detail .right dd{width:122px; text-align:left; font-size:11px; }
 .product_detail .right dd p a{color:#666;}
-.product_detail .right dd span a{color:#999; font-size:12px;}
+.product_detail .right dd span a{color:#999; font-size:11px;}
 .product_detail .right dd strong{width:122px; text-align:left; height:34px; line-height:34px; color:#984e9a; font-size:16px; display:block; margin-bottom:10px;}
 .product_detail .right .detial_page{width:122px; text-align:center;}
 .product_detail .right .detial_page img{margin:0 4px;}
@@ -456,11 +456,11 @@ b.img-desc{ width:16px; height:16px; background: url("../images/ui-icons_984e9a_
 .web_map_box{width:998px; overflow:hidden; padding-top:10px; border-top:1px solid #984e9a;}
 .web_map_box .left_nav .all_pro_box{width:312px; overflow:hidden;}
 .web_map_box .left_nav li{float:left; border-bottom:none;}
-.content .web_map_box .left_nav span a{width:84px; padding-left:20px;}
+.content .web_map_box .left_nav span a{width:84px; padding-left:5px;}
 .content .web_map_box .all_products{width:312px; overflow:hidden;}
 .web_map_box .left_nav .all_pro_box .big_tittle a{padding-left:100px;}
 .content .web_map_box .all_products .one{float:left;}
-.content .web_map_box .all_products .one a{width:79px; height:21px; line-height:21px; text-align:left; color:#595757; display:block; font-size:11px; padding-left:25px;}
+.content .web_map_box .all_products .one a{ height:21px; line-height:21px; text-align:left; color:#595757; display:block; font-size:11px; padding-left:5px;}
 .content .web_map_box .all_products .one a:hover{ background:#dcdddd;}
 .content .web_map_box .all_products .one .pro_title{color:#984e9a;}
 /*联系我们*/
