--- a/themes/yzl_v3/css/style.css
+++ b/themes/yzl_v3/css/style.css
@@ -28,12 +28,12 @@ a.indiv{display: block; float: left; width:100%; height: 100%; overflow: hidden;
 #header .header_r_inner li{float:left; font-size:11px; width:76px; height:22px; background:url(../images/header_r_bg.jpg) no-repeat right center; line-height:22px; text-align:center;}
 #header .header_r_inner li a{ color:#5a5a5a;}
 #header .header_r_inner li a:hover{color:#984e9a;}
-#header .header_r_inner .gallery{ background:none;}
+#header .header_r_inner .gallery{ background:none;text-align:left; padding-left:15px;}
 #header .header_r_inner .gallery a{color:#984e9a;}
-#header .header_r_r{width:248px; overflow:hidden;margin-top:32px; float:left;}
+#header .header_r_r{width:248px; overflow:hidden;margin-top:32px; float:right;}
 #header .header_r_r .shop_bag{font-size:11px; width:42px; height:36px; background:url(../images/shop_bag.jpg) no-repeat left center; padding-left:40px; margin:0px 5px; float:left; padding-top:7px;}
 #header .header_r_r .shop_bag a{ color:#5a5a5a;}
-#header .header_r_r .code{float:left;}
+#header .header_r_r .code{float:right;}
 .banner{width:998px; height:434px; margin:auto 0;}
 .content_box{ position:relative; width:998px; margin:5px auto 0; min-height:33px;}
 .content_box .nav_inner{float: right; width:658px; display: block;}
@@ -56,8 +56,8 @@ a.indiv{display: block; float: left; width:100%; height: 100%; overflow: hidden;
 .product_show{width:998px; overflow:hidden; margin:0 auto;}
 .product_show li{float:left; margin-left:17px; display:inline;}
 .skin_nav{width:998px; overflow:hidden; margin:0 auto; text-align:center; height:30px;font-size:14px; padding-top:20px;}
-.skin_nav a{color:#5a5a5a;display:inline-block; width:106px; height:22px;line-height:22px; text-align:center; background:url(../images/header_r_bg.jpg) no-repeat right center;}
-.skin_nav .samll_shop{width:115px; heigth:22px; background:url(../images/Sshop_bag.jpg) no-repeat right center;}
+.skin_nav a{color:#5a5a5a;display:inline-block; height:22px;line-height:22px; background:url(../images/header_r_bg.jpg) no-repeat right center; padding: 0 15px; }
+.skin_nav .samll_shop{ heigth:22px; background:url(../images/Sshop_bag.jpg) no-repeat right center;padding-right: 30px;}
 .skin_nav a:hover{color:#984e9a;}
 .foot{width:988px; margin:0 auto; padding-top:14px;  border-top:1px solid #ccc;}
 .foot .left{float:left; width:420px; overflow:hidden;}
@@ -70,7 +70,7 @@ a.indiv{display: block; float: left; width:100%; height: 100%; overflow: hidden;
 
 #navmenu{position: relative; z-index: 10;}
 
-.nav_box{width:998px;height:31px;border-top:2px solid #954d97;position:absolute;top:-1px;left:0px;}
+.nav_box{width:998px;height:31px;border-top:2px solid #954d97;position:absolute;top:-2px;left:0px;}
 .nav_box_inner{width:998px; height:31px; background:#9fa0a0; /*opacity:0.5;*/filter: alpha(opacity=75);-moz-opacity: 0.75; opacity: 0.75; }
 /*用户注册*/
 .login_content{width:998px; overflow:hidden; margin:28px auto 0;}
@@ -144,8 +144,8 @@ b.img-desc{ width:16px; height:16px; background: url("../images/ui-icons_984e9a_
 .content .right .pic_show{width:858px; overflow:hidden;}
 .content .right .pic_show li{float:left; margin:0px 18px 18px 0;}
 .content .right .pic_show .no_margin{margin-right:0px;}
-.content .right h2 span{color:#984e9a; font-size:14px; font-weight:normal; width:240px; height:30px; line-height:30px; float:left;}
-.content .right h2 strong{float:right;font-weight:normal; font-size:12px; height:30px; line-height:30px;}
+.content .right h2 span{color:#984e9a; font-size:14px; font-weight:normal; width:240px; float:left; padding-bottom:5px;}
+.content .right h2 strong{float:right;font-weight:normal; font-size:12px; height:30px; line-height:30px;width:79px; padding-left:25px;}
 .content .right h2 strong a{width:70px; height:30px; display:block; float:left; text-align:center; color:#727171;}
 .content .right h2 strong .current{width:70px; height:30px; /*background:url(../images/arrows.jpg) no-repeat right center;*/ color:#984e9a; padding-right:8px;}
 /*全线产品——详情*/
